# urbanflow-mobility

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
dossier/diagrammes/: 01_use_case.puml  02_sequence_itineraire.puml  03_class_domain.puml
projet/backend/src/: main.ts
projet/carbon-service/: pyproject.toml
projet/carbon-service/app/: __init__.py  config.py  main.py
projet/carbon-service/tests/: test_health.py
projet/docker/: backend.Dockerfile  carbon-service.Dockerfile  frontend.Dockerfile
projet/docs/: README.md
projet/docs/adr/: 0001-architecture-imposee.md
projet/frontend/: eslint.config.mjs  package-lock.json  package.json
tasks/: lessons.md  todo.md
