[project]
name = "urbanflow-carbon-service"
version = "0.1.0"
description = "Microservice de calcul d'empreinte carbone pour UrbanFlow Mobility"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# "S" = règles de sécurité (Bandit) : activées dès le départ, conformément au
# principe "Secure by Design" du projet.
select = ["E", "F", "I", "N", "UP", "B", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# S101 : `assert` est l'idiome normal de pytest, mais interdit en code applicatif.
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
